(library
 (name soup)
 (public_name lambdasoup)
 (modules soup lambdasoup)
 (synopsis "Easy functional HTML scraping and manipulation")
 (wrapped false)
 (flags (:standard -w +A -warn-error -3))
 (instrumentation (backend bisect_ppx))
 (libraries markup camlp-streams))

(rule
  (with-stdout-to soup.ml
    (progn (cat compat.ml) (cat soup.ml.in))))

(rule
  (with-stdout-to compat.ml
    (run ocaml %{dep:build_compat.ml})))

